fixed spacing

--- a/styles/User.module.css
+++ b/styles/User.module.css
@@ -22,7 +22,7 @@
     width: 90px;
     height: 90px;
     border-radius: 50%;
-    margin-left: 10px;
+    margin-left: 1em;
     margin-top: -45px;
 }
 
@@ -30,7 +30,7 @@
     color: #fff;
     font-weight: 700;
     font-size: .9em;
-    margin-left: 10px;
+    margin-left: 1em;
     margin-bottom: 20px;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .miscInfo {
-    margin-left: 10px;
+    margin-left: 1em;
     display: flex;
 }
 
